Fixed vertical alignment of accounts dropdown menu

--- a/packages/reaction-core-theme/theme/accounts/accounts.less
+++ b/packages/reaction-core-theme/theme/accounts/accounts.less
@@ -8,8 +8,12 @@
 // ----------------------------------------------------------------------------
 // Login Dropdown
 //
+.accounts-dropdown {
+  height: 100%;
+}
+
 .accounts-dialog {
-  
+
   width: @accounts-dialog-width;
 
 
@@ -33,7 +37,7 @@
   .loginForm-title {
     display: none;
   }
-}    
+}
 
 .sign-in-text-facebook:before  {
   content: "\f09a";
